# cardilib

./: .coveragerc  AUTHORS.rst  LICENSE  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
src/cardilib/analysis/: dyssynchrony_analysis.py
src/cardilib/analysis/.ipynb_checkpoints/: peak_given-checkpoint.py  peaks_calculation-checkpoint.py
tests/: conftest.py  test_peaks_calculation.py  test_statistical_functions.py
tests/lib/analysis/: test_peaks_calculation.py  test_statistical_functions.py
