[metadata]
name = cardilib
version = 0.0.1
author = Velez Rueda Ana Julia
author_email = anavelezrueda@gmail.com
description = Python library for performing biomedical images analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CardiAP/cardilib
project_urls =
    Bug Tracker = https://github.com/CardiAP/cardilib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src